added mnist to environment

--- a/environment.yml
+++ b/environment.yml
@@ -60,6 +60,7 @@ dependencies:
   - mkl-service=2.3.0=py38h196d8e1_0
   - mkl_fft=1.2.0=py38h45dec08_0
   - mkl_random=1.1.1=py38h47e9c7a_0
+  - mnist=0.2.2=py_0
   - multidict=4.7.6=py38he774522_1
   - numpy=1.19.2=py38hadc3359_0
   - numpy-base=1.19.2=py38ha3acd2a_0
